--- a/index.html
+++ b/index.html
@@ -2,95 +2,261 @@
 <html>
 
 <head>
-    <title>Resume</title>
-    <style>
-        /* Set a background color */
-        body {
-            background-color: #f2f2f2;
-        }
-
-        /* Add a high-contrast color for the text */
-        h1, h2, h3, p {
-            color: #000000;
-        }
-
-        /* Center the text */
-        .center {
-            text-align: center;
-        }
-
-        /* Add a box shadow for the cards */
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-        }
-
-        /* Add hover effect for the cards */
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-
-        /* Add padding and margin to the cards */
-        .container {
-            padding: 2px 16px;
-            margin: 20px;
-        }
-
-        /* Add a white background color for the cards */
-        .container {
-            background-color: #ffffff;
-        }
-
-        body {
-            display: grid;
-            font-family: "Times New Roman", sans-serif;
-            gap: 2em;
-        }
-    </style>
+    <title>JP Melanson</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Polyglot software developer. I love to create fantastic user experiences for my
+    customers. I have skills in app, web, cloud and devops engineering. I'm a hacker at heart that can quickly ramp up
+    on any technologies. When I am not coding, I take care of my 3 kids and enjoy sports like ice hockey and mountain
+    biking.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700&amp;display=swap">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-<div class="center">
-    <h1>Jean-Philippe Melanson</h1>
-    <h3>Senior Software Engineer</h3>
-</div>
+<div id="root">
+    <div class="row flex-wrap align-start">
+        <div class="container left-container">
+            <div class="col align-center">
+                <img alt="Profile picture" class="pfp" src="img/me.jpg"></img>
+            </div>
+            <h1>Jean-Philippe Melanson</h1>
+            <h2>Lead Software Engineer</h2>
+            <section>
+                <h2 class="mt">Contact</h2>
+                <hr/>
+                <div class="col">
+                    <div class="row py">
+                        <img alt="globe icon" class="icon pr" src="img/globe-outline.svg"></img>
+                        <p>Lévis (QC) Canada (GMT-5/6)</p>
+                    </div>
+                    <a href="mailto: jplmelanson@gmail.com">
+                        <div class="row py">
+                            <img alt="email icon" class="icon pr" src="img/mail-outline.svg"></img>
+                            <p>jplmelanson@gmail.com</p>
+                        </div>
+                    </a>
+                    <a href="sms: +14189035365">
+                        <div class="row py">
+                            <img alt="phone icon" class="icon pr" src="img/call-outline.svg"></img>
+                            <p>+1 (418) 903-5365</p>
+                        </div>
+                    </a>
+                    <div class="icons row py">
+                        <a href="https://www.linkedin.com/in/jpmelanson">
+                            <img alt="LinkedIn icon" class="icon pr" src="img/logo-linkedin.svg"></img>
+                        </a>
+                        <a href="https://twitter.com/jp_melanson">
+                            <img alt="Twitter icon" class="icon pr" src="img/logo-twitter.svg"></img>
+                        </a>
+                        <a href="https://github.com/jp-melanson">
+                            <img alt="Github icon" class="icon pr" src="img/logo-github.svg"></img>
+                        </a>
+                        <a href="https://stackoverflow.com/users/659114/jpmelanson">
+                            <img alt="Github icon" class="icon pr" src="img/logo-stackoverflow.svg"></img>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h2 class="mt">Education</h2>
+                <hr/>
+                <p>IT engineering B.Sc. (2008)</p>
+                <p>École de technologie supérieure</p>
+                <p>Montreal, QC, Canada</p>
+            </section>
+            <section>
+                <h2 class="mt">Objectives</h2>
+                <hr/>
+                <p>
+                    Polyglot software developer and architect with 15+ years of experience.
+                    Looking to work on client-first products with A team players.
+                    Excel in coding front-facing apps (mobile, web) and turn business vision into reality.
+                </p>
+            </section>
+            <section>
+                <h2 class="mt">Interests</h2>
+                <hr/>
+                <ul class="pl">
+                    <li>crypto & blockchains (bitcoin, solana, NFTs, SFTs)</li>
+                    <li>e-commerce & consumer products</li>
+                    <li>scientific applications</li>
+                </ul>
+            </section>
+            <section>
+                <h2 class="mt">Personal life</h2>
+                <hr/>
+                <p class="mt">
+                    In my personal time, I try to stay physically active.
+                    I mostly do workouts, running and ice hockey.
+                    I also love to spend time outdoor with the family (fishing, camping, etc)
+                    on weekends/holidays.
+                </p>
+            </section>
+        </div>
+        <div class="container main-container">
+            <h2>Skills</h2>
+            <hr/>
+            <section>
+                <h4 class="center">Programming</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">TypeScript</p>
+                    <p class="tag">JavaScript</p>
+                    <p class="tag">Ruby</p>
+                    <p class="tag">Golang</p>
+                    <p class="tag">Kotlin</p>
+                    <p class="tag">Scala</p>
+                </div>
 
-<div class="card">
-    <div class="container">
-        <h2>Summary</h2>
-        <p>
-            Professional software developer with over 15 years of experience.
-            I'm fullstack developer that like to get its hands on a bit of everything.
-            I have extensive experience with complex backend systems, UIs, APIs,
-            3rd party integrations, clouds, devops, CI/CD. I can architect and scale
-            solutions from A to Z.
-        </p>
+            </section>
+            <section>
+                <h4 class="center">Mobile</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">React Native</p>
+                    <p class="tag">Android</p>
+                    <p class="tag">Apple/Play store</p>
+                    <p class="tag">Detox</p>
+                </div>
+            </section>
+            <section>
+                <h4 class="center">Web</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">React</p>
+                    <p class="tag">Jest</p>
+                    <p class="tag">Next.js</p>
+                    <p class="tag">HTML</p>
+                    <p class="tag">CSS</p>
+                    <p class="tag">Rails</p>
+                </div>
+            </section>
+            <section>
+                <h4 class="center">Crypto</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">Solana</p>
+                    <p class="tag">Metaplex</p>
+                    <p class="tag">Web3.js</p>
+                </div>
+            </section>
+            <section>
+                <h4 class="center">Databases</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">SQL</p>
+                    <p class="tag">Postgres</p>
+                    <p class="tag">MySql</p>
+                    <p class="tag">Redis</p>
+                </div>
+            </section>
+            <section>
+                <h4 class="center">Cloud / CI / CD</h4>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">AWS</p>
+                    <p class="tag">Google</p>
+                    <p class="tag">Heroku</p>
+                    <p class="tag ml">Docker</p>
+                    <p class="tag">Github</p>
+                    <p class="tag">Gitlab</p>
+                </div>
+            </section>
+            <h2 class="mt">Experience</h2>
+            <hr/>
+            <section class="mt">
+                <h4>June 2020 - December 2022</h4>
+                <h3>Fastaf Technologies inc. (remote)</h3>
+                <ul class="pl">
+                    <li>USDC checkout on Solana blockchain</li>
+                    <li>NFT rewards and fidelity program</li>
+                    <li>BOGO, referral and other discounting mechanisms</li>
+                    <li>Apple Pay and Stripe payment support</li>
+                    <li>Backend migration form Shopify/Node to Rails</li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>2021 - present</h4>
+                <h3>Institut universitaire de cardiologie et de pneumologie de Québec – Université Laval (remote /
+                    freelance)</h3>
+                <ul class="pl">
+                    <li>Ventilo - Complete migration of native app to React Native</li>
+                    <li>Ventilo - Implementing ventilation optimization calculus</li>
+                    <li>Ventilo - Multilingual support</li>
+                    <li>Ventilo - Web version (pending)</li>
+                    <li>Oxygapp - New app for oxygenation adjustment (ongoing)</li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>April 2018 - May 2020</h4>
+                <h3>Ticketmaster (Quebec City / freelance)</h3>
+                <ul class="pl">
+                    <li>Concert entry web management platform (go/java microservices)</li>
+                    <li>NFT ticket rendering and scanning solution</li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>October 2017 - March 2018</h4>
+                <h3>Asurion (remote / freelance)</h3>
+                <ul class="pl">
+                    <li>
+                        Maintained the insurance claim consumer web application and backend
+                        services (React, Scala)
+                    </li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>Ocrtober 2016 - October 2017</h4>
+                <h3>Ticketmaster (Quebec City / freelance)</h3>
+                <ul class="pl">
+                    <li>Created a redeemable code management web application</li>
+                    <li>Cross-system user migration project</li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>2016 - 2017</h4>
+                <h3>ONAI (remote / part time freelance)</h3>
+                <ul class="pl">
+                    <li>Create a Jupyter notebook management console.</li>
+                    <li>
+                        Create a ReactNative application to showcase ONAI's AI capabilities
+                        for video streaming (WebRTC)
+                    </li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>2014 - 2015</h4>
+                <h3>Element inc. (remote / part time freelance)</h3>
+                <ul class="pl">
+                    <li>Play/Scala webapp maintenance</li>
+                    <li>Invoice management with Quickbooks integration</li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>May 2014 - May 2016</h4>
+                <h3>Balihoo (Boise, ID)</h3>
+                <ul class="pl">
+                    <li>
+                        Play/Scala web development of a local-first Google Analytics marketing
+                        campaign tool in
+                    </li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>Jul 2014 - May 2014</h4>
+                <h3>Ticketmaster (Québec)</h3>
+                <ul class="pl">
+                    <li>
+                        Java development on the european ticketing backend
+                    </li>
+                </ul>
+            </section>
+            <section class="mt">
+                <h4>May 2008 - May 2011</h4>
+                <h3>Université Laval (Québec)</h3>
+                <ul class="pl">
+                    <li>
+                        Java/JSF development of the e-learning platform
+                    </li>
+                </ul>
+            </section>
+        </div>
     </div>
 </div>
-
-<div class="card">
-    <div class="container">
-        <h2>Education</h2>
-        <h3>Degree and Institution</h3>
-        <p>A brief description of your education.</p>
-    </div>
-</div>
-
-<div class="card">
-    <div class="container">
-        <h2>Experience</h2>
-        <h3>Job Title and Company</h3>
-        <p>A brief description of your job experience.</p>
-    </div>
-</div>
-
-<div class="card">
-    <div class="container">
-        <h2>Skills</h2>
-        <p>A list of your skills and expertise.</p>
-    </div>
-</div>
-
 </body>
-
 </html>
