--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                 <h2 class="mt">Contact</h2>
                 <hr/>
                 <div class="col">
-                    <div class="row py">
+                    <div class="row py flex-nowrap">
                         <img alt="globe icon" class="icon pr" src="img/globe-outline.svg"></img>
                         <p>Lévis (QC) Canada (GMT-5/6)</p>
                     </div>
                     <a href="mailto: jplmelanson@gmail.com">
-                        <div class="row py">
+                        <div class="row py flex-nowrap">
                             <img alt="email icon" class="icon pr" src="img/mail-outline.svg"></img>
                             <p>jplmelanson@gmail.com</p>
                         </div>
                     </a>
                     <a href="sms: +14189035365">
-                        <div class="row py">
+                        <div class="row py flex-nowrap">
                             <img alt="phone icon" class="icon pr" src="img/call-outline.svg"></img>
                             <p>+1 (418) 903-5365</p>
                         </div>
