Ionic icon lib and copyright line

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" >
+<html lang="en-us">
 
 <head>
     <title>JP Melanson</title>
@@ -9,6 +9,7 @@
     on any technologies. When I am not coding, I take care of my 3 kids and enjoy sports like ice hockey and mountain
     biking.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700&amp;display=swap">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
@@ -36,33 +37,33 @@
                 <hr/>
                 <div class="col">
                     <div class="row py flex-nowrap">
-                        <img alt="globe icon" class="icon pr" src="img/globe-outline.svg"></img>
+                        <ion-icon name="globe-outline" class="pr"></ion-icon>
                         <p>Lévis (QC) Canada (GMT-5/6)</p>
                     </div>
                     <a href="mailto: jplmelanson@gmail.com">
                         <div class="row py flex-nowrap">
-                            <img alt="email icon" class="icon pr" src="img/mail-outline.svg"></img>
+                            <ion-icon name="mail-outline" class="pr"></ion-icon>
                             <p>jplmelanson@gmail.com</p>
                         </div>
                     </a>
                     <a href="sms: +14189035365">
                         <div class="row py flex-nowrap">
-                            <img alt="phone icon" class="icon pr" src="img/call-outline.svg"></img>
+                            <ion-icon name="call-outline" class="pr"></ion-icon>
                             <p>+1 (418) 903-5365</p>
                         </div>
                     </a>
-                    <div class="icons row py">
+                    <div class="row py justify-center">
                         <a href="https://www.linkedin.com/in/jpmelanson">
-                            <img alt="LinkedIn icon" class="icon pr" src="img/logo-linkedin.svg"></img>
-                        </a>
-                        <a href="https://twitter.com/jp_melanson">
-                            <img alt="Twitter icon" class="icon pr" src="img/logo-twitter.svg"></img>
+                            <ion-icon name="logo-linkedin" class="pr linkedin"></ion-icon>
                         </a>
                         <a href="https://github.com/jp-melanson">
-                            <img alt="Github icon" class="icon pr" src="img/logo-github.svg"></img>
+                            <ion-icon name="logo-github" class="pr"></ion-icon>
                         </a>
                         <a href="https://stackoverflow.com/users/659114/jpmelanson">
-                            <img alt="Github icon" class="icon pr" src="img/logo-stackoverflow.svg"></img>
+                            <img aria-label="stackoverflow logo" class="pr stackoverflow" src="img/so.svg"></img>
+                        </a>
+                        <a href="https://twitter.com/jp_melanson">
+                            <ion-icon name="logo-twitter" class="pr twitter"></ion-icon>
                         </a>
                     </div>
                 </div>
@@ -263,6 +264,9 @@
                         Java/JSF development of the e-learning platform
                     </li>
                 </ul>
+            </section>
+            <section class="mt center">
+                Crafted with <ion-icon name="heart" class="red"></ion-icon> by me 😊 (2023)
             </section>
         </div>
     </div>
