Adding soft skills

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="mt">Education</h2>
                 <hr/>
                 <p>IT engineering B.Sc. (2008)</p>
-                <p>École de technologie supérieure</p>
+                <h4>École de technologie supérieure</h4>
                 <p>Montreal, QC, Canada</p>
             </section>
             <section>
@@ -88,15 +88,15 @@
                 <h2 class="mt">Interests</h2>
                 <hr/>
                 <ul class="pl">
-                    <li>crypto & blockchains (bitcoin, solana, NFTs, SFTs)</li>
-                    <li>e-commerce & consumer products</li>
-                    <li>scientific applications</li>
+                    <li>Crypto apps & blockchains (bitcoin/lightning, solana, NFTs, SFTs)</li>
+                    <li>Consumer products & e-commerce</li>
+                    <li>Scientific applications</li>
                 </ul>
             </section>
             <section>
                 <h2 class="mt">Personal life</h2>
                 <hr/>
-                <p class="mt">
+                <p>
                     In my personal time, I try to stay physically active.
                     I mostly do workouts, running and ice hockey.
                     I also love to spend time outdoor with the family (fishing, camping, etc)
@@ -108,7 +108,7 @@
             <h2>Skills</h2>
             <hr/>
             <section>
-                <h4 class="center">Programming</h4>
+                <p class="center">Programming</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">TypeScript</p>
                     <p class="tag">JavaScript</p>
@@ -120,7 +120,7 @@
 
             </section>
             <section>
-                <h4 class="center">Mobile</h4>
+                <p class="center">Mobile</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">React Native</p>
                     <p class="tag">Android</p>
@@ -129,7 +129,7 @@
                 </div>
             </section>
             <section>
-                <h4 class="center">Web</h4>
+                <p class="center">Web</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">React</p>
                     <p class="tag">Jest</p>
@@ -140,7 +140,7 @@
                 </div>
             </section>
             <section>
-                <h4 class="center">Crypto</h4>
+                <p class="center">Crypto</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">Solana</p>
                     <p class="tag">Metaplex</p>
@@ -148,7 +148,7 @@
                 </div>
             </section>
             <section>
-                <h4 class="center">Databases</h4>
+                <p class="center">Databases</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">SQL</p>
                     <p class="tag">Postgres</p>
@@ -157,7 +157,7 @@
                 </div>
             </section>
             <section>
-                <h4 class="center">Cloud / CI / CD</h4>
+                <p class="center">Cloud / CI / CD</p>
                 <div class="row flex-wrap justify-center">
                     <p class="tag ml">AWS</p>
                     <p class="tag">Google</p>
@@ -165,6 +165,16 @@
                     <p class="tag ml">Docker</p>
                     <p class="tag">Github</p>
                     <p class="tag">Gitlab</p>
+                </div>
+            </section>
+            <section>
+                <p class="center">Soft</p>
+                <div class="row flex-wrap justify-center">
+                    <p class="tag ml">Conscientious</p>
+                    <p class="tag ml">Meticulous</p>
+                    <p class="tag ml">Team player</p>
+                    <p class="tag ml">Creative</p>
+                    <p class="tag ml">Stress tolerant</p>
                 </div>
             </section>
             <h2 class="mt">Experience</h2>
