Change meta description and keywords

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <title>JP Melanson</title>
     <meta charset="utf-8">
-    <meta name="description" content="Polyglot software developer. I love to create fantastic user experiences for my
-    customers. I have skills in app, web, cloud and devops engineering. I'm a hacker at heart that can quickly ramp up
-    on any technologies. When I am not coding, I take care of my 3 kids and enjoy sports like ice hockey and mountain
-    biking.">
+    <meta name="description" content="JP's resume, lead software engineer">
+    <meta name="keywords" content="jp,melanson,tech,mobile,app,freelance,freelancer,design,web,cloud,react,reactnative,consulting,consultant,software,engineer,cto">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700&amp;display=swap">
