--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="mt center">
+            <section class="about mt center">
                 Crafted with <ion-icon name="heart" class="red"></ion-icon> by me 😊 (2023)
             </section>
         </div>
