--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <p class="printonly">github.com/jp-melanson</p>
                         </div>
                         <div class="printrow py">
-                            <a href="https://stackoverflow.com/users/659114/jpmelanson" title="Stack Overflow">
+                            <a href="https://stk.so/jpmelanson" title="Stack Overflow">
                             <img aria-label="stackoverflow logo" class="pr stackoverflow" src="img/so.svg"></img>
                             </a>
                             <p class="printonly">stk.so/jpmelanson</p>
