--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <section>
                 <h2 class="mt">Education</h2>
                 <hr/>
-                <p>IT engineering B.Sc. (2008)</p>
                 <h4>École de technologie supérieure</h4>
-                <p>Montreal, QC, Canada</p>
+                <p>IT engineering B.Sc. (2008)</p>
+                <p class="py">Montreal, QC, Canada</p>
             </section>
             <section>
                 <h2 class="mt">Objectives</h2>
@@ -195,9 +195,9 @@
             <h2 class="mt">Experience</h2>
             <hr/>
             <section class="mt">
-                <h4>June 2020 - December 2022</h4>
                 <h3>Fastaf Technologies inc. (remote)</h3>
-                <ul class="pl">
+                <p>June 2020 - December 2022</p>
+                <ul class="pl mt">
                     <li>USDC checkout on Solana blockchain</li>
                     <li>NFT rewards and fidelity program</li>
                     <li>BOGO, referral and other discounting mechanisms</li>
@@ -206,10 +206,10 @@
                 </ul>
             </section>
             <section class="mt">
-                <h4>2021 - present</h4>
                 <h3>Institut universitaire de cardiologie et de pneumologie de Québec – Université Laval (remote /
                     freelance)</h3>
-                <ul class="pl">
+                <p>2021 - present</p>
+                <ul class="pl mt">
                     <li>Ventilo - Complete migration of native app to React Native</li>
                     <li>Ventilo - Implementing ventilation optimization calculus</li>
                     <li>Ventilo - Multilingual support</li>
@@ -218,17 +218,17 @@
                 </ul>
             </section>
             <section class="mt">
-                <h4>April 2018 - May 2020</h4>
                 <h3>Ticketmaster (Quebec City / freelance)</h3>
-                <ul class="pl">
+                <p>April 2018 - May 2020</p>
+                <ul class="pl mt">
                     <li>Concert entry web management platform (go/java microservices)</li>
                     <li>NFT ticket rendering and scanning solution</li>
                 </ul>
             </section>
             <section class="mt">
-                <h4>October 2017 - March 2018</h4>
                 <h3>Asurion (remote / freelance)</h3>
-                <ul class="pl">
+                <p>October 2017 - March 2018</p>
+                <ul class="pl mt">
                     <li>
                         Maintained the insurance claim consumer web application and backend
                         services (React, Scala)
@@ -236,17 +236,17 @@
                 </ul>
             </section>
             <section class="mt">
-                <h4>Ocrtober 2016 - October 2017</h4>
                 <h3>Ticketmaster (Quebec City / freelance)</h3>
-                <ul class="pl">
+                <p>Ocrtober 2016 - October 2017</p>
+                <ul class="pl mt">
                     <li>Created a redeemable code management web application</li>
                     <li>Cross-system user migration project</li>
                 </ul>
             </section>
             <section class="mt">
-                <h4>2016 - 2017</h4>
                 <h3>ONAI (remote / part time freelance)</h3>
-                <ul class="pl">
+                <p>2016 - 2017</p>
+                <ul class="pl mt">
                     <li>Create a Jupyter notebook management console.</li>
                     <li>
                         Create a ReactNative application to showcase ONAI's AI capabilities
@@ -255,17 +255,17 @@
                 </ul>
             </section>
             <section class="mt">
-                <h4>2014 - 2015</h4>
                 <h3>Element inc. (remote / part time freelance)</h3>
-                <ul class="pl">
+                <p>2014 - 2015</p>
+                <ul class="pl mt">
                     <li>Play/Scala webapp maintenance</li>
                     <li>Invoice management with Quickbooks integration</li>
                 </ul>
             </section>
             <section class="mt">
-                <h4>May 2014 - May 2016</h4>
                 <h3>Balihoo (Boise, ID)</h3>
-                <ul class="pl">
+                <p>May 2014 - May 2016</p>
+                <ul class="pl mt">
                     <li>
                         Play/Scala web development of a local-first Google Analytics marketing
                         campaign tool in
@@ -273,18 +273,18 @@
                 </ul>
             </section>
             <section class="mt">
-                <h4>Jul 2014 - May 2014</h4>
                 <h3>Ticketmaster (Québec)</h3>
-                <ul class="pl">
+                <p>Jul 2014 - May 2014</p>
+                <ul class="pl mt">
                     <li>
                         Java development on the european ticketing backend
                     </li>
                 </ul>
             </section>
             <section class="mt">
-                <h4>May 2008 - May 2011</h4>
                 <h3>Université Laval (Québec)</h3>
-                <ul class="pl">
+                <p>May 2008 - May 2011</p>
+                <ul class="pl mt">
                     <li>
                         Java/JSF development of the e-learning platform
                     </li>
