--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <ul class="pl mt">
                     <li>
                         Play/Scala web development of a local-first Google Analytics marketing
-                        campaign tool in
+                        campaign tool
                     </li>
                 </ul>
             </section>
