--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <p>April 2018 - May 2020</p>
                 <ul class="pl mt">
                     <li>Concert entry web management platform (go/java microservices)</li>
-                    <li>NFT ticket rendering and scanning solution</li>
+                    <li>NFC ticket rendering and scanning solution</li>
                 </ul>
             </section>
             <section class="mt">
