--- a/index.html
+++ b/index.html
@@ -195,53 +195,74 @@
             <h2 class="mt">Experience</h2>
             <hr/>
             <section class="mt">
+                <h3>9366-2583 Quebec inc.</h3>
+                <p>September 2017 - current</p>
+                <ul class="pl mt">
+                    <li>Responsible for cultivating strong relationships with customers, partners, and stakeholders, as well as staying up-to-date on industry trends and developments</li>
+                    <li>Business development opportunities and client prospecting</li>
+                    <li>Oversee all operations, including sales, accounting and customer success</li>
+                </ul>
+                <h4>Skills</h4>
+                <p>Go (Programming Language) · Next.js · GitHub · Business Development · Finance · Marketing · Customer Service · Design Patterns · JavaScript · Amazon Web Services (AWS) · PostgreSQL · React.js · React Native · Android · TypeScript</p>
+            </section>
+            <section class="mt">
                 <h3>Fastaf Technologies inc. (remote)</h3>
                 <p>June 2020 - December 2022</p>
                 <ul class="pl mt">
-                    <li>USDC checkout on Solana blockchain</li>
-                    <li>NFT rewards and fidelity program</li>
-                    <li>BOGO, referral and other discounting mechanisms</li>
-                    <li>Apple Pay and Stripe payment support</li>
-                    <li>Backend migration form Shopify/Node to Rails</li>
+                    <li>Onboarded as a full time employee in February 2022, after being a contractor for some time</li>
+                    <li>Core contributor to various e-commerce initiatives: checkout, mobile payments, marketing analytics, notifications and customer loyalty</li>
+                    <li>As a member of mobile team pod, I was responsible of end-to-end feature development, from UX to API development</li>
+                    <li>Lead several critical initiatives to raise company fundings like USDC payment support, Stripe fiat-to-crypto on-ramp and NFT loyalty program</li>
+                    <li>Performed various DevOps, Server maintenance and monitoring tasks in a proactive way</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Heroku · GitHub · React Native · Ruby on Rails · TypeScript</p>
             </section>
             <section class="mt">
                 <h3>Institut universitaire de cardiologie et de pneumologie de Québec – Université Laval (remote /
                     freelance)</h3>
                 <p>2021 - present</p>
                 <ul class="pl mt">
-                    <li>Ventilo - Complete migration of native app to React Native</li>
-                    <li>Ventilo - Implementing ventilation optimization calculus</li>
-                    <li>Ventilo - Multilingual support</li>
-                    <li>Ventilo - Web version (pending)</li>
-                    <li>Oxygapp - New app for oxygenation adjustment (ongoing)</li>
+                    <li>Complete migration of native IOS and Android apps to React Native to simplify code management</li>
+                    <li>Creating entire new applications from scratch using Expo and React Native</li>
+                    <li>Add various mobile features on scientific applications</li>
+                    <li>Creating web version of mobile applications</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>React Native · TypeScript · JavaScript · Next.js · Tailwind · React.js</p>
             </section>
             <section class="mt">
                 <h3>Ticketmaster (Quebec City / freelance)</h3>
                 <p>April 2018 - May 2020</p>
                 <ul class="pl mt">
-                    <li>Concert entry web management platform (go/java microservices)</li>
-                    <li>NFC ticket rendering and scanning solution</li>
+                    <li>As a member of the e-tickets scanning and Presence initiative, I was responsible of backend feature development in a highly distributed cloud micro services environment in Java, Go and AWS</li>
+                    <li>Core contributor to several DevOps initiatives like release process automation, code quality monitoring and Infrastructure as Code using GitLab, Docker and Terraform</li>
+                    <li>Developed live event scanning support for Apple/Android wallet passes</li>
+                    <li>Modernized the Android scanner application by adding DI support and leveraging the MVVM architecture</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Spring Boot · Terraform · Java · Amazon Web Services (AWS) · Docker · Android · Gitlab · Go</p>
             </section>
             <section class="mt">
                 <h3>Asurion (remote / freelance)</h3>
                 <p>October 2017 - March 2018</p>
                 <ul class="pl mt">
-                    <li>
-                        Maintained the insurance claim consumer web application and backend
-                        services (React, Scala)
-                    </li>
+                    <li>Worked on several bug fixes in the Scala backend services for the customer claim management solution</li>
+                    <li>Created a session management utility for the web application</li>
+                    <li>Improved UX by fixing issues raised by design team</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>JavaScript · Scala · React.js · TypeScript</p>
             </section>
             <section class="mt">
                 <h3>Ticketmaster (Quebec City / freelance)</h3>
                 <p>Ocrtober 2016 - October 2017</p>
                 <ul class="pl mt">
-                    <li>Created a redeemable code management web application</li>
-                    <li>Cross-system user migration project</li>
+                    <li>Implementing end-to-end functionalities on a new redeemable code management web application based on React, Redux and JavaScript</li>
+                    <li>Developed a user migration tool service for a legacy system</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Redux.js · AWS · Java · JavaScript · React.js</p>
             </section>
             <section class="mt">
                 <h3>ONAI (remote / part time freelance)</h3>
@@ -253,6 +274,8 @@
                         for video streaming (WebRTC)
                     </li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Scala · ScalaJS · React Native · WebRTC</p>
             </section>
             <section class="mt">
                 <h3>Element inc. (remote / part time freelance)</h3>
@@ -261,34 +284,52 @@
                     <li>Play/Scala webapp maintenance</li>
                     <li>Invoice management with Quickbooks integration</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Scala · Java · Play Framework</p>
             </section>
             <section class="mt">
                 <h3>Balihoo (Boise, ID)</h3>
                 <p>May 2014 - May 2016</p>
+                <p>As part of a team of talented and experienced engineers, and through collaboration with many great marketing minds, I had the pleasure to work on development of a unique marketing platform. The Balihoo Local Marketing Cloud is an incredibly powerful solution for national brands looking to take control of their retail marketing channels and optimize their CTR/CPC through targeted local advertising campaigns.</p>
                 <ul class="pl mt">
-                    <li>
-                        Play/Scala web development of a local-first Google Analytics marketing
-                        campaign tool
-                    </li>
+                    <li>Writing software in Scala and CoffeeScript</li>
+                    <li>Integrating 3rd party APIs like Google AdWords, Microsoft Dynamics</li>
+                    <li>Architect cloud based data processing solutions using Amazon Web Services</li>
+                    <li>Design data warehouse schemas (AWS Redshift) and write ETL scripts</li>
+                    <li>Participate in architectural meetings</li>
+                    <li>Provide proactive live operational support for most services involved with</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Scala · AWS · Play Framework - JavaScript</p>
             </section>
             <section class="mt">
                 <h3>Ticketmaster (Québec)</h3>
                 <p>Jul 2014 - May 2014</p>
+                <p>
+                    As a member of the software engineering team responsible to maintain and evoluate the international e-ticketing platform, I was mostly involved in their Java services development and infrastructure support. Most of my work was devoted to modernize their stack and make the web services reliable and scalable. (This platform can sell thousands of tickets within minutes!)
+                </p>
                 <ul class="pl mt">
-                    <li>
-                        Java development on the european ticketing backend
-                    </li>
+                    <li>Optimize logging and add monitoring probes to all services</li>
+                    <li>Write Java code for new features, bridging with legacy systems</li>
+                    <li>Design a custom client/server architecture for web services authorization</li>
+                    <li>Create a small load testing library on top of Gatling in Scala</li>
+                    <li>Automate deployment of a contained development environment with Docker</li>
+                    <li>Optimize the message-oriented architectured layer</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Java · MySQL · ActiveMQ · Docker</p>
             </section>
             <section class="mt">
                 <h3>Université Laval (Québec)</h3>
                 <p>May 2008 - May 2011</p>
                 <ul class="pl mt">
-                    <li>
-                        Java/JSF development of the e-learning platform
-                    </li>
+                    <li>Write code in Java for major features like assignment deposit box, questionnaire module and syllabus rendering</li>
+                    <li>Write re-usable JSF components in Java and Javascript</li>
+                    <li>Write cross-browser utility functions in Javascript</li>
+                    <li>Involved at multiple levels of the Agile process in place</li>
                 </ul>
+                <h4>Skills</h4>
+                <p>Java · Hibernate · JavaScript</p>
             </section>
             <section class="about mt center">
                 Crafted with
