Add generic cie logo

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <hr/>
             <div class="mt">
                 <div class="f row flex-nowrap">
-                    <img class="cie_logo" src="https://static.licdn.com/sc/h/aajlclc14rr2scznz5qm2rj9u"/>
+                    <img class="cie_logo" src="img/cie.svg"/>
                     <div class="ml">
                         <h3>9366-2583 Quebec inc.</h3>
                         <p>September 2017 - current (sole proprietorship)</p>
