--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>
                     Polyglot software developer and architect with 15+ years of experience.
                     Looking to work on client-first products with A team players.
-                    Excel in coding front-facing apps (mobile, web) and performant distributed backend to turn business
+                    Excel in coding front-facing apps and performant backends to turn business
                     visions into reality.
                 </p>
             </section>
