--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html lang="en-us">
 
 <head>
-    <title>JP Melanson</title>
-    <meta charset="utf-8">
-    <meta name="description" content="JP's resume, lead software engineer">
-    <meta name="keywords"
-          content="jp,melanson,tech,mobile,app,freelance,freelancer,design,web,cloud,react,reactnative,consulting,consultant,software,engineer,cto">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700&amp;display=swap">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="main.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-V49XEZRK7X"></script>
     <script>
@@ -25,6 +15,17 @@
 
       gtag('config', 'G-V49XEZRK7X');
     </script>
+    <script type="module" src="https://unpkg.com/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@latest/dist/ionicons/ionicons.js"></script>
+    <title>JP Melanson</title>
+    <meta charset="utf-8">
+    <meta name="description" content="JP's resume, lead software engineer">
+    <meta name="keywords"
+          content="jp,melanson,tech,mobile,app,freelance,freelancer,design,web,cloud,react,reactnative,consulting,consultant,software,engineer,cto">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700&amp;display=swap">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div id="root">
