Change objectives -> about

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                 <p class="py">Montreal, QC, Canada</p>
             </section>
             <section>
-                <h3 class="mt">Objectives</h3>
+                <h3 class="mt">About</h3>
                 <hr/>
                 <p>
-                    Polyglot software developer and architect with 15+ years of experience.
-                    Looking to work on client-first products with A team players.
-                    Excel in coding front-facing apps and performant backends to turn business
-                    visions into reality.
+                    Full Stack and Mobile software engineer with fifteen (15) years of experience working in startups
+                    and large scale businesses. I have a passion for developing quality applications and software that
+                    will match a company business vision. Currently looking for remote position at high growth funded
+                    startups. Preferred tech stacks: React, React Native, Typescript/JS, Ruby On Rails, Go, Kotlin
                 </p>
             </section>
             <section>
