--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <ion-icon name="globe-outline" class="pr"></ion-icon>
                         <p>Lévis (QC) Canada (GMT-5/6)</p>
                     </div>
-                    <a href="mailto: jplmelanson@gmail.com">
+                    <a href="mailto:jplmelanson@gmail.com">
                         <div class="row py flex-nowrap">
                             <ion-icon name="mail-outline" class="pr"></ion-icon>
                             <p>jplmelanson@gmail.com</p>
                         </div>
                     </a>
-                    <a href="sms: +14189035365">
+                    <a href="sms:+14189035365">
                         <div class="row py flex-nowrap">
                             <ion-icon name="call-outline" class="pr"></ion-icon>
                             <p>+1 (418) 903-5365</p>
@@ -183,6 +183,7 @@
                     <p class="tag ml">Docker</p>
                     <p class="tag">Github</p>
                     <p class="tag">Gitlab</p>
+                    <p class="tag">Supabase</p>
                 </div>
             </section>
             <section>
@@ -197,6 +198,24 @@
             </section>
             <h2 class="mt">Experience</h2>
             <hr/>
+            <div class="mt">
+                <div class="f row flex-nowrap">
+                    <img class="cie_logo" src="img/doormath.png"/>
+                    <div class="ml">
+                        <h3>Doormath.ca</h3>
+                        <p>Since April 2023 (founding partner)</p>
+                    </div>
+                </div>
+                <div class="pl mt">
+                    <ul>
+                        <li>I created the SaaS platform from scratch that allows user to get precise and free home values in the Province of Quebec market.
+                        </li>
+                        <li>Responsible for all technology decisions.</li>
+                        <li>Created multiple features on the app such as login, emails, appraisal process, data aggregation, broker/agency onboarding, broker/agency dashboards, payment system, ads system, coverage management, property address search, etc.</li>
+                    </ul>
+                    <p><span class="bold">Skills: </span>Supabase · Next.JS · React · Typescript · Product developement</p>
+                </div>
+            </div>
             <div class="mt">
                 <div class="f row flex-nowrap">
                     <img class="cie_logo" src="img/cie.svg"/>
