Add position titles

--- a/index.html
+++ b/index.html
@@ -52,24 +52,25 @@
           <section>
             <h3 class="mt">Contact</h3>
             <hr />
-            <div class="col">
-              <div class="row py flex-nowrap">
-                <ion-icon name="globe-outline" class="pr"></ion-icon>
-                <p>Lévis (QC) Canada (GMT-5/6)</p>
+            <div class="row">
+              <div class="col">
+                <div class="row py flex-nowrap">
+                  <ion-icon name="globe-outline" class="pr"></ion-icon>
+                  <p>Lévis (QC) Canada (GMT-5/6)</p>
+                </div>
+                <a href="mailto:jplmelanson@gmail.com">
+                  <div class="row py flex-nowrap">
+                    <ion-icon name="mail-outline" class="pr"></ion-icon>
+                    <p>jplmelanson@gmail.com</p>
+                  </div>
+                </a>
+                <a href="sms:+14189035365">
+                  <div class="row py flex-nowrap">
+                    <ion-icon name="call-outline" class="pr"></ion-icon>
+                    <p>+1 (418) 903-5365</p>
+                  </div>
+                </a>
               </div>
-              <a href="mailto:jplmelanson@gmail.com">
-                <div class="row py flex-nowrap">
-                  <ion-icon name="mail-outline" class="pr"></ion-icon>
-                  <p>jplmelanson@gmail.com</p>
-                </div>
-              </a>
-              <a href="sms:+14189035365">
-                <div class="row py flex-nowrap">
-                  <ion-icon name="call-outline" class="pr"></ion-icon>
-                  <p>+1 (418) 903-5365</p>
-                </div>
-              </a>
-              <br />
               <div class="row justify-center">
                 <div class="printrow py">
                   <a
@@ -213,7 +214,8 @@
               <img class="cie_logo" src="img/doormath.png" />
               <div class="ml">
                 <h3>Doormath.ca</h3>
-                <p>Since April 2023 (founding partner)</p>
+                <h4>Lead Engineer & acting CTO</h4>
+                <p>Since April 2023</p>
               </div>
             </div>
             <div class="pl mt">
@@ -237,6 +239,7 @@
               <img class="cie_logo" src="img/fastaf.jpeg" />
               <div class="ml">
                 <h3>Fastaf Technologies inc.</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>
                   June 2020 - December 2022 (remote / full time / contract then
                   fte)
@@ -267,6 +270,7 @@
                   Institut universitaire de cardiologie et de pneumologie de
                   Québec
                 </h3>
+                <h4>Mobile/Web Consultant</h4>
                 <p>April 2021 - present (remote / part time / contract)</p>
               </div>
             </div>
@@ -290,6 +294,7 @@
               <img class="cie_logo" src="img/tm.jpeg" />
               <div class="ml">
                 <h3>Ticketmaster</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>April 2018 - May 2020 (full time / contract)</p>
               </div>
             </div>
@@ -305,6 +310,7 @@
                 Android scanner app by introducing Dependency Injection support
                 and leveraging the MVVM architecture.
               </p>
+              <br />
               <p>
                 <span class="bold">Skills: </span>Spring Boot · Terraform · Java
                 · Amazon Web Services (AWS) · Docker · Android · Gitlab · Go
@@ -316,6 +322,7 @@
               <img class="cie_logo" src="img/asurion.jpeg" />
               <div class="ml">
                 <h3>Asurion</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>October 2017 - March 2018 (remote / full time / contract)</p>
               </div>
             </div>
@@ -326,6 +333,7 @@
                 management utility for the web application. Enhanced UX by
                 resolving issues identified by the design team.
               </p>
+              <br />
               <p>
                 <span class="bold">Skills: </span>JavaScript · Scala · React.js
                 · TypeScript
@@ -337,6 +345,7 @@
               <img class="cie_logo" src="img/tm.jpeg" />
               <div class="ml">
                 <h3>Ticketmaster</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>October 2016 - October 2017 (full time / contract)</p>
               </div>
             </div>
@@ -346,6 +355,7 @@
                 management web app using React, Redux, and JavaScript.
                 Engineered a user migration tool service for a legacy system.
               </p>
+              <br />
               <p>
                 <span class="bold">Skills: </span>Redux.js · AWS · Java ·
                 JavaScript · React.js
@@ -378,6 +388,7 @@
               <img class="cie_logo" src="img/element.jpeg" />
               <div class="ml">
                 <h3>Element, Inc.</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>2014 - 2015 (remote / part time / contract)</p>
               </div>
             </div>
@@ -397,6 +408,7 @@
               <img class="cie_logo" src="img/cie.svg" />
               <div class="ml">
                 <h3>9366-2583 Quebec inc. (sole proprietorship)</h3>
+                <h4>President</h4>
                 <p>September 2017 - current</p>
               </div>
             </div>
@@ -420,6 +432,7 @@
               <img class="cie_logo" src="img/balihoo.jpeg" />
               <div class="ml">
                 <h3>Balihoo</h3>
+                <h4>Senior Fullstack Engineer</h4>
                 <p>
                   May 2014 - May 2016 (Boise, ID then remote / full time / fte)
                 </p>
@@ -447,6 +460,7 @@
               <img class="cie_logo" src="img/tm.jpeg" />
               <div class="ml">
                 <h3>Ticketmaster</h3>
+                <h4>Backend Engineer</h4>
                 <p>June 2011 - May 2014 (Quebec / full time)</p>
               </div>
             </div>
@@ -472,6 +486,7 @@
               <img class="cie_logo" src="img/ul.jpeg" />
               <div class="ml">
                 <h3>Université Laval</h3>
+                <h4>Fullstack Engineer</h4>
                 <p>May 2008 - May 2011 (Quebec / full time)</p>
               </div>
             </div>
